--- a/client/styles/chatPage.css
+++ b/client/styles/chatPage.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
 }
 
 .chatBoxTop{
@@ -50,6 +51,15 @@
     cursor: pointer;
     background-color: #1877f2;
     color: white;
+}
+
+.noConversationText {
+    position: absolute;
+    top: 15%;
+    font-size: 50px;
+    color: lightgrey;
+    text-align: center;
+    cursor: default;
 }
 
 .chatOnline{
