--- a/client/styles/chatPage.css
+++ b/client/styles/chatPage.css
@@ -1,72 +1,75 @@
-.messenger{
-    height: calc(100vh - 16px);
-    display: flex;
+.messenger {
+  height: calc(100vh - 16px);
+  display: flex;
 }
 
-.chatMenu{
-    flex: 3.5;
+.chatMenu {
+  flex: 3.5;
 }
-.chatMenuInput{
-    width: 90%;
-    padding: 10px 0;
-    border: none;
-    border-bottom: 1px solid gray;
-}
-
-.chatBox{
-    flex: 5.5;
+.chatMenuInput {
+  width: 90%;
+  padding: 10px 0;
+  border: none;
+  border-bottom: 1px solid gray;
 }
 
-.chatBoxWrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
+.chatBox {
+  flex: 5.5;
 }
 
-.chatBoxTop{
-    height: 100%;
-    overflow-y: scroll;
-    padding-right: 10px;
+.chatBoxWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
 }
 
-.chatBoxBottom{
-    margin-top: 5px;
-    display: flex ;
-    align-items: center;
-    justify-content: space-between;
+.chatBoxTop {
+  height: 100%;
+  overflow-y: scroll;
+  padding-right: 10px;
 }
-.chatMessageInput{
-    width: 80%;
-    height: 90px;
-    padding: 10px;
-    border: 1px solid lightgrey
+
+.chatBoxBottom {
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.chatMessageInput {
+  width: 80%;
+  height: 90px;
+  padding: 10px;
+  border: 1px solid lightgrey;
 }
 
 .chatSubmitButton {
-    width: 70px;
-    height: 40px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: #1877f2;
-    color: white;
+  width: 70px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #1877f2;
+  color: white;
 }
 
 .noConversationText {
-    position: absolute;
-    top: 15%;
-    font-size: 50px;
-    color: lightgrey;
-    text-align: center;
-    cursor: default;
+  position: absolute;
+  top: 15%;
+  font-size: 50px;
+  color: lightgrey;
+  text-align: center;
+  cursor: default;
+  padding-right: 15px;
 }
 
-.chatOnline{
-    flex: 3;
+.chatOnline {
+  flex: 3;
 }
 
-.chatMenuWrapper, .chatBoxWrapper, .chatOnlineWrapper{
-    padding: 15px;
-    height: 100%;
+.chatMenuWrapper,
+.chatBoxWrapper,
+.chatOnlineWrapper {
+  padding: 15px;
+  height: 100%;
 }
